# RandomEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  doxygen.txt
Editor/: CMakeLists.txt
Editor/src/: EditorApp.cpp  EditorApp.hpp  EditorLayer.cpp  EditorLayer.hpp  SceneLayer.cpp  SceneLayer.hpp
Random/: CMakeLists.txt
Random/include/Client/: EntryPoint.hpp  Random.hpp
Random/include/Platform/OpenGL/: ImGuiOpenGLRenderer.h
Random/include/Platform/Windows/: WindowsWindow.hpp
Random/include/Random/: Application.hpp  Core.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  Window.hpp
Random/include/Random/events/: ApplicationEvent.hpp  Event.hpp  MouseEvent.hpp
Random/include/Random/imgui/: ImguiLayer.hpp
Random/src/: RandomPch.hpp
Random/src/Client/: EntryPoint.hpp  Random.hpp
Random/src/Platform/OpenGL/: ImGuiGLFWWindow.cpp  ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  Shader.cpp
Random/src/Platform/Windows/: WindowsDeltaTime.cpp  WindowsInput.cpp  WindowsInputLayer.cpp  WindowsWindow.cpp  WindowsWindow.hpp
Random/src/Random/: Application.cpp  Application.hpp  LayerStack.cpp  Log.cpp
Random/src/Random/Core/: Application.cpp  Application.hpp  Assert.hpp  Config.hpp  Core.hpp  DeltaTime.hpp  Event.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Profiler.hpp  Ref.cpp  Ref.hpp  Window.hpp
Random/src/Random/Core/App/: Application.cpp  Application.hpp  Input.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Window.hpp
Random/src/Random/Core/Memory/: Ref.cpp  Ref.hpp  RefCount.hpp  Scope.hpp  Weak.hpp
Random/src/Random/Core/codes/: KeyCodes.hpp  MouseCodes.hpp
Random/src/Random/Debug/: Instrumentor.hpp  Profiler.hpp
Random/src/Random/Layers/: ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiProfileLayer.hpp  InputLayer.hpp
Random/src/Random/Renderer/: Buffer.cpp  Buffer.hpp  Layout.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
Random/src/Random/Renderer/Buffer/: Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Layout.hpp  VertexArray.cpp  VertexArray.hpp
Random/src/Random/Renderer/Graphics/: GraphicsContext.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  Shader.cpp  Shader.hpp  SubTexture2D.cpp  SubTexture2D.hpp  Texture.cpp  Texture.hpp  camera.cpp  camera.hpp
Random/src/Random/Scene/: Component.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp
Random/src/Random/events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Random/src/Random/imgui/: ImGuiLayer.cpp  ImguiLayer.hpp
Sandbox/: CMakeLists.txt
Sandbox/Assets/Shaders/: Texture.glsl
Sandbox/include/: Sandbox.hpp
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.hpp  Game.cpp  Sandbox.cpp  Sandbox.hpp  SandboxLayer.cpp  SandboxLayer.hpp
